--- a/metadata.yaml
+++ b/metadata.yaml
@@ -95,6 +95,7 @@ subjects:
 - !lcsh 'Wordsworth, Dorothy, 1771-1855 -- Travel -- Scotland'
 - !lcc 'DA'
 - !lcsh 'Scotland -- Description and travel'
+- GITenberg
 title: Recollections of a Tour Made in Scotland A.D. 1803
 url: http://www.gutenberg.org/ebooks/28880
 wikipedia:
